--- a/Anchor.toml
+++ b/Anchor.toml
@@ -8,7 +8,11 @@ stake_my_sol = "C6Vb7CQCa2Hovhpdu1iaZR3VBcbKt3W9XNHRYYs1NVd"
 url = "https://api.apr.dev"
 
 [provider]
+# testnet
 # cluster = "https://radial-blissful-surf.solana-testnet.quiknode.pro/e3ccd1cfd24786408ed6afffbe3bbf5aa8f74cc0/"
+# cluster = "testnet"
+# devnet
+# cluster = "https://solana-devnet.g.alchemy.com/v2/GYjR1mO4JjwZ1mC6LLuwCVrFWFLY6BWX"
 cluster = "devnet"
 wallet = "/home/nick/.config/solana/devnet.json"
 
