--- a/Anchor.toml
+++ b/Anchor.toml
@@ -7,13 +7,8 @@ stake_my_sol = "FmziXL4yqAoj6taTrpxQm4JGQn4tFiXX7CPhrm2Bieun"
 [registry]
 url = "https://api.apr.dev"
 
-[provider]
-# testnet
-# cluster = "https://radial-blissful-surf.solana-testnet.quiknode.pro/e3ccd1cfd24786408ed6afffbe3bbf5aa8f74cc0/"
 # cluster = "testnet"
-# devnet
-cluster = "https://solana-devnet.g.alchemy.com/v2/GYjR1mO4JjwZ1mC6LLuwCVrFWFLY6BWX"
-# cluster = "devnet"
+cluster = "devnet"
 wallet = "/home/nick/.config/solana/devnet.json"
 
 [scripts]
